@@ -241,7 +241,12 @@ invoking the compiler.</p>
     particular, if you use JDK 1.4+ the generated classes will not be
     usable for a 1.1 Java VM unless you explicitly set this attribute
     to the value 1.1 (which is the default value for JDK 1.1 to
-    1.3).  We highly recommend to always specify this attribute.</b></td>
+    1.3).  We highly recommend to always specify this
+    attribute.</b><br>
+    A default value for this attribute can be provided using the magic
+    <a
+    href="../javacprops.html#target"><code>ant.build.javac.target</code></a>
+    property.</td>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
@@ -322,7 +327,11 @@ invoking the compiler.</p>
     at all.<br>
     <b>Note that the default value depends on the JVM that is running
     Ant.  We highly recommend to always specify this
-    attribute.</b></td>
+    attribute.</b><br>
+    A default value for this attribute can be provided using the magic
+    <a
+    href="../javacprops.html#source"><code>ant.build.javac.source</code></a>
+    property.</td>
 
     <td align="center" valign="top">No</td>
   </tr>
