@@ -407,7 +407,11 @@ to ensure that this command supports the attributes you wish to use.</p>
     <td valign="top">Necessary to enable javadoc to handle assertions
     present in J2SE v 1.4 source code. Set this to &quot;1.4&quot; to
     documents code that compiles using <code>&quot;javac -source
-    1.4&quot;</code>.</td>
+    1.4&quot;</code>.<br>
+    A default value for this attribute can be provided using the magic
+    <a
+    href="../javacprops.html#source"><code>ant.build.javac.source</code></a>
+    property.</td>
     <td align="center" valign="top">1.4+</td>
     <td align="center" valign="top">No</td>
   </tr>
