@@ -14,6 +14,7 @@
 <h3>Concepts</h3>
 <a href="clonevm.html">ant.build.clonevm</a><br>
 <a href="sysclasspath.html">build.sysclasspath</a><br>
+<a href="javacprops.html">Ant properties controlling javac</a><br>
 <a href="CoreTasks/common.html">Common Attributes</a><br>
 
 <h3>Core Types</h3>
